# XCode

./: LICENSE  README.md  README_EN.md  README_ZH_CN.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  xcode-release-key.jks
app/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
modules/agent/: build.gradle.kts
modules/android-tree-sitter/: build.gradle.kts  consumer-rules.pro
modules/chat-agent/ai/: build.gradle.kts
modules/chat-agent/app/: build.gradle.kts  compose_compiler_config.conf  consumer-rules.pro  proguard-rules.pro
modules/chat-agent/common/: build.gradle.kts
modules/chat-agent/document/: build.gradle.kts
modules/chat-agent/highlight/: build.gradle.kts
modules/chat-agent/web-ui/: copy.ts  (+4 more)
modules/clangd-lsp/: build.gradle.kts
modules/editor-core/: build.gradle.kts
modules/project-file-tree/: build.gradle.kts
modules/sora-editor/: build.gradle.kts
modules/sora-editor-lsp/: build.gradle.kts
modules/sora-language-textmate/: build.gradle.kts
modules/sora-language-treesitter/: build.gradle.kts
modules/sora-language-treesitter/src/main/cpp/: CMakeLists.txt  grammar_bindings.cpp
modules/sora-language-treesitter/src/main/cpp/cpp/: tree-sitter-cpp.cpp  ts__log.h  ts__onload.h  ts_cpp.h
modules/sora-language-treesitter/src/main/cpp/cpp/tree_sitter/: alloc.h
modules/sora-oniguruma-native/: build.gradle.kts
modules/terminal-emulator/: build.gradle
modules/terminal-view/: build.gradle
modules/toolchain-runtime/: build.gradle.kts
(+629 files in other folders)
